[project]
name = "lookervault"
version = "0.1.0"
description = "LookerVault is a CLI tool that backs up your entire Looker content"
authors = [
    { name = "z3z1ma", email = "butler.alex2010@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    # Critical dependencies with upper bounds for API stability
    "google-cloud-storage>=3.7.0,<4.0.0",  # Cloud storage API - major version lock
    "looker-sdk>=24.0.0,<26.0.0",          # Looker API - allow 24.x-25.x, block 26.x
    "msgspec>=0.20.0,<1.0.0",              # Binary serialization - lock pre-1.0
    "pydantic>=2.0.0,<3.0.0",              # Validation framework - major version lock
    "pathvalidate>=3.3.1",                       # YAML parsing - stable
    "rich>=14.2.0",                        # UI/display - cosmetic only
    "ruamel-yaml>=0.18.0",                 # YAML parsing - stable
    "tenacity>=9.1.2",                   # CLI framework - stable
    "google-crc32c>=1.7.1",
    "typer>=0.9.0",
]

[project.scripts]
lookervault = "lookervault:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=lookervault --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "S105",
  "S106",
  "ARG",
  "FBT",
  "PLR2004",
  "S311"
]
"src/lookervault/cli/commands/*.py" = ["B008", "B904"]  # Allow typer.Option defaults and typer.Exit exception pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ty]
[tool.ty.environment]
python-version = "3.13"
python = ".venv"
root = ["./src"]

[tool.ty.rules]
# Core type safety - strict enforcement
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"

# Code quality - warnings
unused-ignore-comment = "warn"
redundant-cast = "warn"

[dependency-groups]
dev = [
    "ty>=0.0.1a34",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]
